# cpp_object_detection

./: CMakeLists.txt  main.cpp
include/: object_detection.hpp
src/: object_detection.cpp
